checkout. order list. fix header dropdown menu gap, z-index issue.

--- a/src/styles/scss/_common.scss
+++ b/src/styles/scss/_common.scss
@@ -11,6 +11,8 @@ $bg: #f5f6fa;
 
 $error-red: #dd4b39;
 
+$wrap-side-padding: 15px;
+
 @mixin no-img-background {
   background: #e0e7f5 url('../images/ico/no-img.png')no-repeat center center;
 }
