--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -101,7 +101,7 @@ button {
   max-width: 1200px;
   width: 100%;
   height: 100%;
-  padding: 0 15px;
+  padding: 0 $wrap-side-padding;
   margin: 0 auto;
 }
 
